# technical_ai_eng

./: README.md
.github/workflows/: docker-build-push.yml
coding_test/number_1/: exploratory_analysis.ipynb  pyproject.toml
coding_test/number_2/: .gitignore  README.md  parsing.ipynb  pyproject.toml
coding_test/number_3/: number_3.md
coding_test/number_4/: README.md  pyproject.toml  test_vector.py  vector.py
coding_test/number_5/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_application.sh
coding_test/number_5/app/: config.py  main.py
coding_test/number_5/app/constants/: __init__.py  agent.py  receipt.py
coding_test/number_5/app/routes/: __init__.py  agent.py  receipt.py
coding_test/number_5/app/schemas/: agent.py  receipt.py  response.py  vector.py
coding_test/number_5/app/services/: agent.py  receipt.py  vector.py
coding_test/number_5/app/utils/: agent.py
coding_test/number_5/app/workflow/: agent_callbacks.py  agent_tools.py  agent_workflow.py
coding_test/number_5/frontend/: backend_client.py  main.py  schemas.py
engineering_knowledge_test/: README.md
